
Changed
~~~~~~~

- Typing in the filename prompt now filters matching directories.
- When opening a file qutebrowser can't handle from a `file:///` directory
  listing, qutebrowser now opens it with the default application rather than
  displaying a download prompt.
- In Greasemonkey scripts, using "overrideMimeType" with GM_xmlhttpRequest is
  now supported.

[[v2.3.1]]
v2.3.1 (2021-07-28)
-------------------

Fixed
~~~~~

- Updated the workaround for Google Account log in claiming that this browser
  isn't secure. For an equivalent workaround on older versions, run:
  `:set -u https://accounts.google.com/* content.headers.user_agent "Mozilla/5.0 ({os_info}; rv:90.0) Gecko/20100101 Firefox/90.0"`
- Corrupt cache file exceptions with `adblock` 0.5.0+ are now handled properly.
- Crash when entering unicode surrogates into the filename prompt.
- `UnboundLocalError` in `qute-keepass` when the database couldn't be opened.

[[v2.3.0]]
v2.3.0 (2021-06-28)
-------------------

Added
~~~~~

- New `content.prefers_reduced_motion` setting to request websites to reduce
  non-essential motion/animations.
- New `colors.prompts.selected.fg` setting to customize the text color for
  selected items in filename prompts.

Changed
~~~~~~~

- The hosts-based adblocker (using `content.blocking.hosts.lists`) now also
  blocks all requests to any subdomains of blocked hosts.
- The `fonts.web.*` settings now support URL patterns.
- The `:greasemonkey-reload` command now shows a list of loaded scripts and has
  a new `--quiet` switch to suppress that message.
- When launching a userscript via hints, a new `QUTE_CURRENT_URL` environment
  variable now points to the current page (rather than the URL of the selected
  element, where `QUTE_URL` points to).

Fixed
~~~~~

- Crash on macOS 10.14+ when logging into Google accounts -- the previous fix
  was incomplete due wrong information in Apple's documentation.
- Crash when two Greasemonkey scripts have the same name (usually happening